[package]
name = "bip85_password"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
base64 = "0.13.0"
bitcoin-utils = "0.1.3"
bitcoin = "0.26.1"
hmac-sha512 = "1.1.2"
bip32 = "0.4.0"
secp256k1 = "0.24.0"
rand_core = { version = "0.6", features = ["std"] }
